@@ -75,6 +75,7 @@ The rules for this file:
   * fixed failing 'type' selection for topology formats that read an
     atom type as an integer (such as the AMBER parser)
   * fixed Issue 111 (NAN in pycpqrot and RMSD calculation)
+  * fixed Issue 113 (replaced outdated Biopython to call ClustalW)
 
 02/16/12 sebastien.buchoux
 
